feat: add new  task

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -8,6 +8,9 @@
           placeholder="Type new todo"
           autofocus
           type="text"
+          [value]="newTask()"
+          (input)="onNewTaskInput($event)"
+          (change)="addTask()"
         />
       </div>
     </header>
