--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -10,19 +10,28 @@
           type="text"
           [value]="newTask()"
           (input)="onNewTaskInput($event)"
-          (change)="addTask()"
+          (change)="addTask(newTask())"
         />
       </div>
     </header>
     <div class="container todoapp-wrapper">
+      <pre>
+        <code>
+          {{ tasks() | json }}
+        </code>
+      </pre>
       <!-- This section should be hidden by default and shown when there are todos -->
       <section class="main">
         <ul class="todo-list" >
           @for (task of tasks(); track $index; let i = $index) {
           <li>
             <div class="view">
-              <input class="toggle" type="checkbox" checked />
-              <label>{{ task }}</label>
+              <input 
+                class="toggle" 
+                type="checkbox"
+                [checked]="task.complete" 
+                (change)="updateTask(i)" />
+              <label>{{ task.title }}</label>
               <button class="destroy" type="button" (click)="deleteTask(i)"></button>
             </div>
             <input class="edit" [value]="task" />
@@ -49,7 +58,8 @@
       </ul>
     </section>
       <!-- This footer should be hidden by default and shown when there are todos -->
-    <!-- <footer class="footer">
+    <footer class="footer">
+      <!-- TODO COUNT SHOW S OR NOT-->
       <span class="todo-count"><strong>0</strong> item left</span>
       <ul class="filters">
         <li><a routerLink="/" class="selected">All</a></li>
@@ -59,6 +69,6 @@
       <button class="clear-completed">Clear completed</button>
     </footer>
   </div>
-</section> -->
+</section>
 
 <p>home works!</p>
