--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -40,10 +40,8 @@
           <li>
             <div class="view">
               <input class="toggle" type="checkbox" />
-              <label>Buy a unicorn</label>
               <button class="destroy"></button>
             </div>
-            <input class="edit" value="Buy a unicorn" />
           </li>
           <!--
         <li class="editing">
@@ -59,8 +57,15 @@
     </section>
       <!-- This footer should be hidden by default and shown when there are todos -->
     <footer class="footer">
-      <!-- TODO COUNT SHOW S OR NOT-->
-      <span class="todo-count"><strong>0</strong> item left</span>
+      @if (tasks().length > 1) {
+        <span class="todo-count">
+          <strong>{{ tasks().length }}</strong> items
+        </span>
+      } @else {
+        <span class="todo-count">
+          <strong>{{ tasks().length }}</strong> item
+        </span>
+      }
       <ul class="filters">
         <li><a routerLink="/" class="selected">All</a></li>
         <li><a routerLink="/pending">Pending</a></li>
