feat: fromcontrol from ts or html

--- a/src/app/pages/labs/labs.html
+++ b/src/app/pages/labs/labs.html
@@ -56,4 +56,10 @@
     <p>Hola desconocido.</p>
   }
 }
+
+//MANEJO DE FORMULARIOS REACTIVOS
+<hr>
+<input type="color" [formControl] = "colorCtrl">
+<p>color: {{ colorCtrl.value }}</p>
 </div>
+
