--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -8,18 +8,17 @@
           placeholder="Type new todo"
           autofocus
           type="text"
-          [value]="newTask()"
-          (input)="onNewTaskInput($event)"
-          (change)="addTask(newTask())"
+          [formControl] = "newTaskCtrl"
+          (keydown.enter) = "onNewTaskInput()" 
         />
       </div>
     </header>
     <div class="container todoapp-wrapper">
-      <pre>
+      <!-- <pre>
         <code>
           {{ tasks() | json }}
         </code>
-      </pre>
+      </pre> -->
       <!-- This section should be hidden by default and shown when there are todos -->
       <section class="main">
         <ul class="todo-list" >
