--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -23,7 +23,10 @@
       <section class="main">
         <ul class="todo-list" >
           @for (task of tasks(); track $index; let i = $index) {
-          <li>
+          <li 
+            (dblclick)="updateTaskEditingMode(i)" 
+            [class.completed]="task.complete"
+            [class.editing]="task.editing">
             <div class="view">
               <input 
                 class="toggle" 
@@ -31,27 +34,36 @@
                 [checked]="task.complete" 
                 (change)="updateTask(i)" />
               <label>{{ task.title }}</label>
-              <button class="destroy" type="button" (click)="deleteTask(i)"></button>
+              <button 
+                class="destroy" 
+                type="button" 
+                (click)="deleteTask(i)"></button>
             </div>
-            <input class="edit" [value]="task" />
+            <input 
+              class="edit" 
+              (keydown.enter)="updateTaskEditingText(i, $event)"
+              [value]="task.title" />
           </li>
           }
           <li>
             <div class="view">
-              <input class="toggle" type="checkbox" />
-              <button class="destroy"></button>
+              <input 
+                class="toggle" 
+                type="checkbox" />
+              <button 
+                class="destroy"></button>
             </div>
           </li>
-          <!--
-        <li class="editing">
+          
+        <!-- <li class="editing">
             <div class="view">
               <input class="toggle" type="checkbox" />
               <label>Make dishes</label>
               <button class="destroy"></button>
             </div>
             <input class="edit" value="Make dishes" />
-        </li>
-        -->
+        </li> -->
+       
       </ul>
     </section>
       <!-- This footer should be hidden by default and shown when there are todos -->
